--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Envio Paquetes</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="index.html">Envíos.com</a>
         <button
@@ -88,7 +88,7 @@
         </div>
       </div>
     </main>
-    <footer class="container-fluid py-1 bg-info text-white">
+    <footer class="container-fluid py-1 bg-dark text-white">
       <div class="row">
         <div class="col text-center">
           Derechos reservados
