--- a/calculador.html
+++ b/calculador.html
@@ -17,7 +17,7 @@
     <title>Envio Paquetes - Calculador</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
       <div class="container">
         <a class="navbar-brand" href="index.html">Envíos.com</a>
         <button
@@ -164,7 +164,7 @@
         </div>
       </div>
     </main>
-    <footer class="container-fluid py-1 bg-info text-white">
+    <footer class="container-fluid py-1 bg-danger text-white">
       <div class="row">
         <div class="col text-center">
           Derechos reservados
