--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
   <title>Envio Paquetes - Login</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="index.html">Envíos.com</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barra" aria-controls="barra"
@@ -90,7 +90,7 @@
       </div>
     </div>
   </main>
-  <footer class="container-fluid py-1 bg-info text-white mt-5">
+  <footer class="container-fluid py-1 bg-dark text-white mt-5">
     <div class="row">
       <div class="col text-center">
         Derechos reservados
