--- a/precios.html
+++ b/precios.html
@@ -17,7 +17,7 @@
   <title>Envio Paquetes - Precios</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
       <a class="navbar-brand" href="index.html">Envíos.com</a>
       <button
@@ -107,7 +107,7 @@
       </div>
     </div>
   </main>
-  <footer class="container-fluid py-1 bg-info text-white mt-5">
+  <footer class="container-fluid py-1 bg-danger text-white mt-5">
     <div class="row">
       <div class="col text-center">
         Derechos reservados
