--- a/promociones.html
+++ b/promociones.html
@@ -17,7 +17,7 @@
   <title>Envio Paquetes - Promociones</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
       <a class="navbar-brand" href="index.html">Envíos.com</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barra" aria-controls="barra"
@@ -92,7 +92,7 @@
       </div>
     </div>
   </main>
-  <footer class="container-fluid py-1 bg-info text-white">
+  <footer class="container-fluid py-1 bg-danger text-white">
     <div class="row">
       <div class="col text-center">
         Derechos reservados
